footer alignment fix

--- a/assets/css/tenants.css
+++ b/assets/css/tenants.css
@@ -62,7 +62,7 @@ body {
 
 
 .top-spacing{
-    padding-top: 0.5in;
+    padding-top: 2.0in;
 }
 
 .icon {
@@ -83,9 +83,9 @@ body {
 }
 
 .main-title {
-text-align: center;
-vertical-align: middle;
-line-height: 90px;       /* the same as your div height */
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;       /* the same as your div height */
 }
 
  /* unvisited link */
